# RGU

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: install_poetry.yml  push.yml
Royal Game of Ur/src/: board_raw.xcf  setup_gui.py  white_stone.xcf
royal_game_of_ur/src/: board_transparent_bg.xcf  dark_stone.xcf  rgu.py  rgu_gui.py  setup_gui.py  strategy.py
royal_game_of_ur/src/tests/: test_rgu.py
